<resources>
    <string name="app_name">ShoeStore</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_welcome_to_shoe_store">Welcome to the Shoe Store</string>
    <string name="label_click_next_to_read_instructions">Click next to read instructions</string>
    <string name="label_next">Next</string>
    <string name="label_start">Start</string>
    <string name="label_info_2">All entries will be saved only as long as the app is running.</string>
    <string name="label_info_1">The shoe listing page will show the list of shoes and show a button for adding a new shoe, while the detail page will be for adding a shoe entry.</string>
    <string name="label_add_shoe">Add Shoe</string>
    <string name="label_shoe_name">Shoe Name</string>
    <string name="label_company_name">Company Name</string>
    <string name="label_shoe_size">Shoe Size</string>
    <string name="label_description">Description</string>
    <string name="label_logout">Logout</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="label_empty_error">Input fields must not be empty</string>
</resources>
