<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/labelShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shoe_name" />

        <EditText
            android:id="@+id/shoeNameEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <TextView
            android:id="@+id/labelCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/label_company_name" />

        <EditText
            android:id="@+id/companyNameEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <TextView
            android:id="@+id/labelShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/label_shoe_size" />

        <EditText
            android:id="@+id/shoeSizeEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/label_description" />

        <EditText
            android:id="@+id/descriptionEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <Button
                android:id="@+id/actionCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cancel"
                android:layout_marginEnd="@dimen/margin_medium"/>

            <Button
                android:id="@+id/actionSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_save"
                android:layout_marginStart="@dimen/margin_medium"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>