<?xml version="1.0" encoding="utf-8"?>
<!-- As the UI of the screen is already flat, using a linearlayout instead of constraintlayout
     which is more optimised for these scenarios -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="clickListener"
            type="com.udacity.shoestore.listeners.BindingClickListener" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:text="@string/label_welcome_to_shoe_store"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_click_next_to_read_instructions"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_next"
            android:layout_marginTop="@dimen/top_margin"
            android:onClick="@{() -> clickListener.onClick()}"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>