<?xml version="1.0" encoding="utf-8"?>
<!-- As the UI of the screen is already flat, using a linearlayout instead of constraintlayout
     which is more optimised for these scenarios -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="clickListener"
            type="com.udacity.shoestore.listeners.BindingClickListener" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_info_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/label_info_2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start"
            android:layout_marginTop="@dimen/top_margin"
            android:onClick="@{() -> clickListener.onClick()}"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>