<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintStart_toStartOf="@id/emailInputEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailInputEdt"
            app:layout_constraintHorizontal_bias="0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInputEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="@dimen/margin_small"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/passwordLabel"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@id/passwordInputEdt"
            app:layout_constraintStart_toStartOf="@id/passwordInputEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputEdt"
            app:layout_constraintHorizontal_bias="0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInputEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="@dimen/margin_small"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/passwordInputEdt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/actionSignIn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/passwordInputEdt"
            app:layout_constraintStart_toEndOf="@id/actionSignUp"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>